# vmorc

./: .gitmodules  CMakeLists.txt  README.md  main.cc
vmorc/: util.cc  util.h
